# libmath

./: CMakeLists.txt
include/: libmath.h
